@@ -1,3 +1,13 @@
+2020-04-26  Fred Kiefer <fredkiefer@gmx.de>
+
+	* Source/NSLocale.m: Respect NSLocaleCalendarIdentifier if
+	NSLocaleCalendar isn't set.
+	* Headers/Foundation/NSCalendar.h,
+	* Source/NSCalendar.m: Add newer features for NSDateComponents and
+	started to clean up NSCalendar implementation.
+        * Tests/base/NSCalendar/features-10-7.m: Add test for different
+	time zone.
+
 2020-04-21  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSNotification.m:
